--- a/modules/web/js/ballerina/tool-palette/tool-palette.css
+++ b/modules/web/js/ballerina/tool-palette/tool-palette.css
@@ -52,6 +52,7 @@
     color: #8d8d8d;
 }
 
+/*
 .tool-container {
     width: 39px;
     height: 39px;
@@ -63,6 +64,7 @@
     white-space: nowrap;
     text-align: center;
 }
+*/
 
 .tool-group-body-grid .tool-container {
     width: 69px !important;
@@ -84,8 +86,6 @@
 }
 
 .tool-group-body-grid .tool-container .tool-title-wrap > .tool-title{
-    display: inline-block;
-    color:black;
     overflow: hidden;
     font-size: 0.84em;
     white-space: pre-wrap;
@@ -107,15 +107,19 @@
     margin: 0px 5px 0px 0px;
 }
 
+/*
 .tool-group-body-list .tool-container .tool-title-wrap{
     display: inline-block;
 }
+*/
 
+/*
 .tool-group-body-list .tool-container .tool-title-wrap > .tool-title{
     color:black;
     font-size: 0.84em;
     display: inline-block;
 }
+*/
 
 
 .tool-container-vertical {
@@ -134,6 +138,7 @@
     width: 140px;
 }
 
+/*
 .tool-container-vertical-icon {
     width: 25px;
     height: 25px;
@@ -144,6 +149,7 @@
     text-align: center;
     float: left;
 }
+*/
 
 .tool-title {
     padding-top:0px;
