--- a/modules/web/scss/main.scss
+++ b/modules/web/scss/main.scss
@@ -4,3 +4,5 @@
 @import 'modules/left-toolbar.scss';
 @import 'modules/tabs.scss';
 @import 'modules/source-editor.scss';
+@import 'modules/tools.scss';
+@import 'modules/diagram.scss';
