--- a/modules/web/scss/themes/mid.scss
+++ b/modules/web/scss/themes/mid.scss
@@ -1,10 +1,10 @@
-$header-bgcolor: #f5f5f5;
-$header-brand-color: #000;
+$header-bgcolor: #1e1e1e;
+$header-brand-color: #fff;
 
-$footer-bgcolor: #d4d4d4;
-$footer-color: #444;
+$footer-bgcolor: #151515;
+$footer-color: #6d6d6d;
 
-$menubar-link-color: #444;
+$menubar-link-color: #c7c7c7;
 $menubar-link-hover-color: #fff;
 $menubar-link-disabled-color: #afafaf;
 $menubar-link-hover-bgcolor: #707276;
@@ -12,20 +12,20 @@ $menubar-file-dropdown-menu-bgcolor: #707276;
 $menubar-file-dropdown-menu-link-hover-color: $menubar-file-dropdown-menu-bgcolor;
 $menubar-file-dropdown-menu-link-hover-bgcolor: #d4d4d4;
 
-$breadcrumb-bgcolor: #fcfcfc;
-$breadcrumb-active-color: #000;
+$breadcrumb-bgcolor: #151515;
+$breadcrumb-active-color: #fff;
 
-$left-toolbar-bgcolor: #e4e4e4;
-$left-toolbar-link-color: #21252b;
+$left-toolbar-bgcolor: #151515;
+$left-toolbar-link-color: #999999;
 
-$tab-header-bgcolor: #d4d4d4;
+$tab-header-bgcolor: #282828;
 $tab-header-active-tab-bgcolor: #fff;
-$tab-header-inactive-tab-bgcolor: #707276;
+$tab-header-inactive-tab-bgcolor: #565656;
 $tab-header-active-inverse-tab-bgcolor: #3c3c3c;
 $tab-content-wrapper-bgcolor: #fff;
 $tab-content-wrapper-grid-color: #eee;
 
-$bottom-right-controls-bgcolor: #707276;
+$bottom-right-controls-bgcolor: #565656;
 
 $source-editor-color: #F8F8F8;
 $source-editor-bgcolor: $tab-header-active-inverse-tab-bgcolor;
