--- a/modules/web/css/ballerina-file-editor.css
+++ b/modules/web/css/ballerina-file-editor.css
@@ -918,7 +918,7 @@ input#package-name-input {
 
 .annotation-remove{
     display: inline-block;
-    padding-right: 5px;
+    padding-left: 5px;
     color: #b9b9b9;
     cursor: pointer;
 }
