--- a/modules/web/css/ballerina-file-editor.css
+++ b/modules/web/css/ballerina-file-editor.css
@@ -913,7 +913,7 @@ input#package-name-input {
 }
 
 .active-annotation{
-    background-color: #dddddd;
+    /*background-color: #dddddd;*/
 }
 
 .annotation-remove{
